@@ -4,7 +4,9 @@ Change History
 1.8.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed UnicodeDecodeError when vocabulary value is a non-ascii string.
+  This could happen in selection and multi selection fields.
+  [maurits]
 
 
 1.8.3 (2016-12-06)
